fixed some animation bugs. changed to slide from left instead of top. added link to cv in about section so that a link is there on mobile.

--- a/styles.scss
+++ b/styles.scss
@@ -23,11 +23,12 @@ body {
 	.hidden {
 		opacity: 0;
 		filter: blur(0);
-		transform: translateY(-50%);
-		transition: opacity 1s, filter 1s, transform 1s;
+		transform: translateX(-20%);
+		transition: opacity 1.2s, filter 1.2s, transform 1.2s;
 	}
 
 	#tagline.hidden {
+		transform: translateX(0%);
 		transition-delay: 1s;
 	}
 
@@ -183,6 +184,20 @@ h4 {
 
 .about-text {
 	background-color: $about-bg-colour;
+
+	p {
+		font-size: 1.5rem;
+		font-family: $code-font;
+	}
+
+	.about-cv-link {
+		color: $pop-colour;
+	}
+
+	.about-cv-link:hover {
+		color: $nav-hover-colour;
+		transition: $highlight-transition;
+	}
 }
 
 .project {
@@ -214,6 +229,13 @@ footer {
 }
 
 @media screen and (max-width: 992px) {
+
+	@media (prefers-reduced-motion: no-preference) {
+		.hidden {
+			transform: translateX(-0%);
+		}
+	}
+
 	header {
 		div {
 			h1 {
@@ -221,4 +243,11 @@ footer {
 			}
 		}
 	}
+
+	.about-text {
+		p {
+			font-size: 1rem;
+		}
+	}
+
 }
